monetdb5/tests/BugsViaSourgeforce/Tests/ID.986551.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#use the "mil_schema" for additional support routines
#	io.print("*\"print\"(2);");
	aa_a := *("print");
!ERROR: "*"print"(2);"
!                  ^
! syntax error, unexpected '(', expecting TOK_ITERATION or TOK_ITERATION_PAR or ';'.
